Перед изменением путей

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -35,8 +35,8 @@
                 <input type="text" placeholder="Имя">
                 <div class="name">Введите вашу фамилию:</div>
                 <input type="text" placeholder="Фамилия">
-                <div class="name">Введите ваше отчество:</div>
-                <input type="text" placeholder="Отчество">
+                <div class="name">Введите пароль:</div>
+                <input type="text" placeholder="password">
                 <div class="name">Введите вашу почту:</div>
                 <input type="email" placeholder="Email">
                 <br>
