--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Login</title>
-        <link rel="short icon" href="./img/logo.png" />
-        <link rel="stylesheet" href="/css/slyle.css" />
+        <link rel="shortcut icon" href="static/img/logo.png">
+        <link rel="stylesheet" href="static/css/slyle.css" />
         <script
             src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"
             defer
         ></script>
-        <script src="./js/mane.js" defer></script>
+       <script src="static/js/mane.js" defer></script>
     </head>
     <body>
         <header class="header">
@@ -19,7 +19,7 @@
                     <a href="./index.html">
                         <img
                             class="navigation__logo"
-                            src="./img/logo.png"
+                            src="static/img/logo.png"
                             alt="logo"
                         />
                     </a>
@@ -46,13 +46,13 @@
         <footer class="footer">
             <div class="footer-svgs container">
                 <a href="https://vk.com/iris_mertv"
-                    ><img src="./img/telegram.svg" alt=""
+                    ><img src="static/img/telegram.svg" alt=""
                 /></a>
                 <a href="https://vk.com/iris_mertv"
-                    ><img src="./img/vk.svg" alt=""
+                    ><img src="static/img/vk.svg" alt=""
                 /></a>
                 <a href="https://vk.com/iris_mertv"
-                    ><img src="./img/whatsapp.svg" alt=""
+                    ><img src="static/img/whatsapp.svg" alt=""
                 /></a>
             </div>
         </footer>
