--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,7 +30,7 @@
                 <a href="./contact.html" class="navigation__mane"
                     >Подписаться на рассылку</a
                 >
-                <a class="navigation__login" href="./login.html">Login</a>
+                <a class="navigation__login" href="./register.html">Register</a>
             </nav>
         </header>
         <main class="main container">
@@ -38,81 +38,7 @@
                 <!-- Swiper -->
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <p class="swiper-slide-text">
-                                <a href="./recipe.html"
-                                    >Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Quibusdam, maxime?
-                                    Asperiores, expedita reprehenderit? Rerum
-                                    eum nihil non rem totam quo vitae voluptas
-                                    ducimus quibusdam pariatur. Nostrum
-                                    architecto corporis consequuntur magnam.</a
-                                >
-                            </p>
-                            <p class="swiper-slide-text">
-                                <a href="./recipe.html"
-                                    >Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Quibusdam, maxime?
-                                    Asperiores, expedita reprehenderit? Rerum
-                                    eum nihil non rem totam quo vitae voluptas
-                                    ducimus quibusdam pariatur. Nostrum
-                                    architecto corporis consequuntur magnam.</a
-                                >
-                            </p>
-                            
-                            <p class="swiper-slide-text">
-                                <a href="./recipe.html"
-                                    >Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Quibusdam, maxime?
-                                    Asperiores, expedita reprehenderit? Rerum
-                                    eum nihil non rem totam quo vitae voluptas
-                                    ducimus quibusdam pariatur. Nostrum
-                                    architecto corporis consequuntur magnam.</a
-                                >
-                            </p>
-                            <p class="swiper-slide-text">
-                                <a href="./recipe.html"
-                                    >Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Quibusdam, maxime?
-                                    Asperiores, expedita reprehenderit? Rerum
-                                    eum nihil non rem totam quo vitae voluptas
-                                    ducimus quibusdam pariatur. Nostrum
-                                    architecto corporis consequuntur magnam.</a
-                                >
-                            </p>
-                        </div>
-                        <div class="swiper-slide">
-                            <p class="swiper-slide-text">
-                                <a href="./recipe.html"
-                                    >Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Quibusdam, maxime?
-                                    Asperiores, expedita reprehenderit? Rerum
-                                    eum nihil non rem totam quo vitae voluptas
-                                    ducimus quibusdam pariatur. Nostrum
-                                    architecto corporis consequuntur magnam.</a
-                                >
-                            </p>
-                            <p class="swiper-slide-text">
-                                <a href="./recipe.html"
-                                    >Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Quibusdam, maxime?
-                                    Asperiores, expedita reprehenderit? Rerum
-                                    eum nihil non rem totam quo vitae voluptas
-                                    ducimus quibusdam pariatur. Nostrum
-                                    architecto corporis consequuntur magnam.</a
-                                >
-                            </p>
-                            <p class="swiper-slide-text"> 
-                                <a href="./recipe.html"
-                                    >Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Quibusdam, maxime?
-                                    Asperiores, expedita reprehenderit? Rerum
-                                    eum nihil non rem totam quo vitae voluptas
-                                    ducimus quibusdam pariatur. Nostrum
-                                    architecto corporis consequuntur magnam.</a
-                                >
-                            </p>
-                        </div>
+
                     </div>
                     <div class="swiper-pagination"></div>
                 </div>
