--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Login</title>
+        <title>Register</title>
         <link rel="shortcut icon" href="static/img/logo.png">
         <link rel="stylesheet" href="static/css/slyle.css" />
         <script
             src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"
             defer
         ></script>
-       <script src="static/js/login.js" defer></script>
+       <script src="static/js/register.js" defer></script>
     </head>
     <body>
         <header class="header">
