--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -27,24 +27,29 @@
                         >Рецепты</a
                     >
                 </div>
+                <div class="navigation__btns ">
+                        <a class="navigation__login navigation__login-reg" href="./login.html"
+                            >Авторизация</a
+                        >
+                </div>
             </nav>
         </header>
         <section class="form container">
             <form action="#" id="myForm">
                 <div class="name">Введите ваше имя:</div>
                 <input type="text" placeholder="Имя" id="nameInput">
-                <div class="error" id="nameError"></div>
+                <div id="nameError"></div>
                 <div class="name">Введите вашу фамилию:</div>
                 <input type="text" placeholder="Фамилия" id="surnameInput">
-                <div class="error" id="surnameError"></div>
+                <div id="surnameError"></div>
                 <div class="name">Введите пароль:</div>
                 <input type="text" placeholder="password" id="passwordInput">
-                <div class="error" id="passwordError"></div>
+                <div  id="passwordError"></div>
                 <div class="name">Введите вашу почту:</div>
                 <input type="email" placeholder="Email" id="emailInput">
-                <div class="error" id="emailError"></div>
-                <button class="btn" type="submit">Отправить</button>
+                <div id="emailError"></div>
             </form>
+            <button class="btn">Отправить</button>
         </section>
         <footer class="footer">
             <div class="footer-svgs container">
