--- a/app/static/css/slyle.css
+++ b/app/static/css/slyle.css
@@ -1,80 +1,80 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap");
 * {
-  padding: 0;
-  margin: 0;
-  border: 0;
+    padding: 0;
+    margin: 0;
+    border: 0;
 }
 
 *,
 *:before,
 *:after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 :focus,
 :active {
-  outline: none;
+    outline: none;
 }
 
 a:focus,
 a:active {
-  outline: none;
+    outline: none;
 }
 
 nav,
 footer,
 header,
 aside {
-  display: block;
+    display: block;
 }
 
 html,
 body {
-  height: 100%;
-  width: 100%;
-  font-size: 100%;
-  line-height: 1;
-  font-size: 14px;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
+    height: 100%;
+    width: 100%;
+    font-size: 100%;
+    line-height: 1;
+    font-size: 14px;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
 }
 
 input,
 button,
 textarea {
-  font-family: inherit;
+    font-family: inherit;
 }
 
 input::-ms-clear {
-  display: none;
+    display: none;
 }
 
 button {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
+    padding: 0;
+    border: 0;
 }
 
 a,
 a:visited {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 a:hover {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 ul li {
-  list-style: none;
+    list-style: none;
 }
 
 img {
-  vertical-align: top;
+    vertical-align: top;
 }
 
 h1,
@@ -83,271 +83,355 @@ h3,
 h4,
 h5,
 h6 {
-  font-size: inherit;
-  font-weight: 400;
+    font-size: inherit;
+    font-weight: 400;
 }
 
 .container {
-  max-width: 1600px;
-  margin: 0 auto;
+    max-width: 1600px;
+    margin: 0 auto;
 }
 
 body {
-  font-size: 18px;
-  font-family: "Montserrat";
-  font-weight: 500;
-  background: rgba(218, 193, 0, 0.398);
+    font-size: 18px;
+    font-family: "Montserrat";
+    font-weight: 500;
+    background: rgba(218, 193, 0, 0.398);
 }
 
 .header {
-  background: rgba(238, 255, 0, 0.5);
+    background: rgba(238, 255, 0, 0.5);
 }
 
 .navigation {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 20px 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 20px 0;
 }
 .navigation__logo {
-  width: 75px;
+    width: 75px;
 }
 .navigation__contant {
-  font-size: 45px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 40px;
+    font-size: 45px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    gap: 40px;
 }
 .navigation__contant .navigation__contant-text {
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
 }
 .navigation__contant .navigation__contant-text:hover {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
 }
 .navigation__contant a {
-  color: black;
+    color: black;
 }
 .navigation__mane {
-  color: black;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+    color: black;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
 }
 .navigation__mane:hover {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
 }
 .navigation__login {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  color: white;
-  font-weight: 700;
-  width: 120px;
-  height: 40px;
-  border-radius: 15px;
-  background: #ff9a32;
-  border: 1px solid rgb(88, 62, 13);
-  opacity: 0.7;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    color: white;
+    font-weight: 700;
+    width: 220px;
+    height: 40px;
+    border-radius: 15px;
+    background: #ff9a32;
+    border: 1px solid rgb(88, 62, 13);
+    opacity: 0.7;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
 }
 .navigation__login:hover {
-  opacity: 1;
-  border: 1px solid #ff9a32;
+    opacity: 1;
+    border: 1px solid #ff9a32;
 }
 
 .main {
-  min-height: 85vh;
-  border-right: 2px solid #ff9a32;
-  border-left: 2px solid #ff9a32;
-  padding: 35px 35px 0;
+    min-height: 85vh;
+    border-right: 2px solid #ff9a32;
+    border-left: 2px solid #ff9a32;
+    padding: 35px 35px 0;
 }
 
 .recipes a {
-  color: black;
-  padding-top: 25px;
+    color: black;
+    padding-top: 25px;
 }
 
 .recipes p {
-  padding: 10px;
-  margin-bottom: 30px;
+    padding: 10px;
+    margin-bottom: 30px;
 }
 
 .recipes p:hover {
-  border: 1px dotted #ff9a32;
+    border: 1px dotted #ff9a32;
 }
 
 .footer {
-  background: rgba(238, 255, 0, 0.5);
-  height: 150px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+    background: rgba(238, 255, 0, 0.5);
+    height: 150px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .footer-svgs {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  gap: 55px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    gap: 55px;
 }
 
 .footer-svgs a {
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
 }
 
 .footer-svgs a:hover {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
 }
 
 html,
 body {
-  position: relative;
-  height: 100%;
+    position: relative;
+    height: 100%;
 }
 
 body {
-  background: #eee;
-  color: #000;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
+    background: #eee;
+    color: #000;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 .swiper {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  min-width: 100%;
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    min-width: 100%;
 }
 
 .swiper-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  min-height: 75vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    min-height: 75vh;
 }
 
 .swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+    display: block;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
 }
 
 .swiper-pagination {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 10px;
-  margin-top: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
 }
 
 .swiper-pagination-bullet {
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  line-height: 20px;
-  font-size: 12px;
-  color: #000;
-  opacity: 1;
-  background: rgba(0, 0, 0, 0.2);
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    line-height: 20px;
+    font-size: 12px;
+    color: #000;
+    opacity: 1;
+    background: rgba(0, 0, 0, 0.2);
 }
 
 .swiper-pagination-bullet-active {
-  color: #fff;
-  background: #007aff;
+    color: #fff;
+    background: #007aff;
 }
 
 .form {
-  margin-top: 50px;
-  min-height: 85vh;
+    margin-top: 50px;
+    min-height: 85vh;
 }
 
 .form form {
-  text-align: center;
+    text-align: center;
 }
 
 .form input {
-  width: 225px;
-  height: 50px;
-  padding: 20px;
-  border-radius: 10px;
-  margin-bottom: 10px;
+    width: 225px;
+    height: 50px;
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 10px;
 }
 
 input:nth-child(11) {
-  margin-bottom: 100px;
+    margin-bottom: 100px;
 }
 
 .form div {
-  font-size: 25px;
-  margin-bottom: 15px;
+    font-size: 25px;
+    margin-bottom: 15px;
 }
 
 .form button {
-  color: white;
-  font-weight: 700;
-  height: 50px;
-  width: 125px;
-  border-radius: 20px;
-  background: #ff9a32;
-  border: 1px solid rgb(88, 62, 13);
-  opacity: 0.7;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+    color: white;
+    font-weight: 700;
+    height: 50px;
+    width: 125px;
+    border-radius: 20px;
+    background: #ff9a32;
+    border: 1px solid rgb(88, 62, 13);
+    opacity: 0.7;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
 }
 
 .form button:hover {
-  opacity: 1;
-  border: 1px solid #ff9a32;
+    opacity: 1;
+    border: 1px solid #ff9a32;
+}
+
+.navigation__btns {
+    display: flex;
+    gap: 10px;
+}
+.form__login {
+    padding-top: 200px;
+    /* margin: 0 auto; */
+}
+.navigation__contant-log {
+    display: flex;
+    align-items: center;
+    gap: 35px;
+}
+.navigation__contant-login {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.navigation__login-reg {
+    font-size: 20px;
+    width: 250px;
+    color: white !important;
+}
+.form__recipes {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.form__recipes-text {
+    display: flex;
+    justify-content: space-between;
+}
+.form__recipes-text textarea {
+    padding: 20px;
+    font-size: 25px;
+    border-radius: 15px;
+    width: 500px;
+    height: 480px;
+    margin-bottom: 90px;
+}
+.form__recipes-text h1 {
+    margin-bottom: 10px;
+    font-size: 30px;
+}
+.btn-1 {
+    color: white;
+    font-size: 25px;
+    border-radius: 20px;
+    position: absolute;
+    top: 680px;
+    right: 250px;
+    background: #ff9a32;
+    width: 150px;
+    height: 65px;
+}
+.error{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 634px;
+}
+.error div{
+    font-size: 30px;
+}
+.header-error{
+    font-size: 18px;
+}
+.navigation__btns a{
+    color: white;
+}
+textarea{
+    resize: none
+}
+.btn {
+    margin-left:735px
+}
+.active {
+    display: block;
+}
+.disableRecipe {
+    display: none;
+}
+.disable {
+    display: none;
 }
