--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,7 @@
             defer
         ></script>
         <script src="static/js/mane.js" defer></script>
+        <script src="static/js/current_login.js" defer></script>
     </head>
     <body>
         <header class="header">
@@ -30,7 +31,13 @@
                 <a href="./contact.html" class="navigation__mane"
                     >Подписаться на рассылку</a
                 >
-                <a class="navigation__login" href="./register.html">Register</a>
+                <div class="navigation__btns">
+                    <a class="navigation__login" href="./login.html">Авторизация</a>
+                    <a class="navigation__login" href="./register.html">Зарегистрироваться</a>
+                    <a class="navigation__login disableRecipe" href="./new_recipe.html">Добавить рецепт</a>
+                    <div class="active" id="user-data" data-name="{{ name_user }}"></div>
+                    <a class="quit disable" href="./index.html">Выйти </a>
+                </div>
             </nav>
         </header>
         <main class="main container">
