--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,14 +28,12 @@
                         >Рецепты</a
                     >
                 </div>
-                <a href="./contact.html" class="navigation__mane"
-                    >Подписаться на рассылку</a
-                >
+
                 <div class="navigation__btns">
                     <a class="navigation__login" href="./login.html">Авторизация</a>
                     <a class="navigation__login" href="./register.html">Зарегистрироваться</a>
                     <a class="navigation__login disableRecipe" href="./new_recipe.html">Добавить рецепт</a>
-                    <div class="active" id="user-data" data-name="{{ name_user }}"></div>
+                    <div class="disable" id="user-data" data-name="{{ name_user }}"></div>
                     <a class="quit disable" href="./index.html">Выйти </a>
                 </div>
             </nav>
