--- a/app/templates/current_recipe.html
+++ b/app/templates/current_recipe.html
@@ -10,7 +10,7 @@
             src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"
             defer
         ></script>
-        <script src="static/js/mane.js" defer></script>
+        <script src="static/js/current_recipe.js" defer></script>
         <script src="static/js/current_login.js" defer></script>
     </head>
     <body>
@@ -30,6 +30,9 @@
                         >
                     </div>
                     <div class="navigation__btns">
+                        <a class="navigation__login" href="./login.html">Авторизация</a>
+                        <a class="navigation__login" href="./register.html">Зарегистрироваться</a>
+                        <a class="navigation__login disableRecipe" href="./new_recipe.html">Добавить рецепт</a>
                         <div class="disable" id="user-data" data-name="{{ name_user }}"></div>
                         <a class="quit disable" href="./index.html">Выйти </a>
                     </div>
@@ -40,22 +43,25 @@
             <section class="container">
                 <form action="#" class="form__recipes">
                     <div class="form__recipes-text">
-                        <div class="name-recipe">
+                        <div class="name_recipe">
                             <h1>Название рецепта:</h1>
-                            <div class="disable" id="name-data" data-name_recipe="{{ name_recipe }}"></div>
+                            <div id="name-data"></div>
                         </div>
                         <div class="ingredients">
                             <h1>Ингредиенты:</h1>
-                            <div class="disable" id="ingredients-data" data-ingredients="{{ ingredients }}"></div>
+                            <div  id="ingredients-data"></div>
                         </div>
                         <div class="recipe">
                             <h1>Рецепт:</h1>
-                            <div class="disable" id="recipe-data" data-txt_recipe="{{ txt_recipe }}"></div>
+                            <div  id="recipe-data"></div>
                         </div>
                         <div></div>
                     </div>
+                    <div class="avtor">
+                        <h2>Автор:</h2>
+                        <div  id="avtor-data"></div>
+                    </div>
                 </form>
-                <button class="btn-1" >Отправить</button>
             </section>
         </main>
         <footer class="footer">
