--- a/app/templates/new_recipe.html
+++ b/app/templates/new_recipe.html
@@ -10,7 +10,7 @@
             src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"
             defer
         ></script>
-        <script src="static/js/mane.js" defer></script>
+        <script src="static/js/new_recipe.js" defer></script>
         <script src="static/js/current_login.js" defer></script>
     </head>
     <body>
