--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -41,8 +41,7 @@
         <main>
             <section class="container error">
                 <div>
-                    Ошибка добавления рецепта. <br /><br />
-                    Для добавленрия рецепта вы должны быть авторизованы!<br /><br />
+                    Ошибка 404.
                 </div>
             </section>
         </main>
