--- a/app/templates/new_recipe.html
+++ b/app/templates/new_recipe.html
@@ -40,19 +40,19 @@
             <section class="container">
                 <form action="#" class="form__recipes">
                     <div class="form__recipes-text">
-                        <div class="name-recipe">
+                        <div class="name_recipe">
                             <h1>Введите название рецепта:</h1>
-                            <textarea ></textarea>
+                            <textarea id="name_recipe"></textarea>
                             <div id="nameError"></div>
                         </div>
                         <div class="ingredients">
                             <h1>Введите ингредиенты:</h1>
-                            <textarea ></textarea>
+                            <textarea id="ingredients"></textarea>
                             <div id="ingredientsError"></div>
                         </div>
                         <div class="recipe">
                             <h1>Введите рецепт:</h1>
-                            <textarea ></textarea>
+                            <textarea id="recipe"></textarea>
                             <div id="recipeError"></div>
                         </div>
                         <div></div>
